src/client/components/pages/office-lookup-page/office-lookup-page.scss
.officeSearch {
  position: relative;
}

.noResults {
  position: absolute;
  top: 70px;
}

.searchBar {
  background-color: $sba-blue;
  label,
  h2 {
    color: white;
  }
  button {
    padding: 13px 22px;
    margin-top: 20px;
    @include grid-media($sba-grid-large) {
      margin-top: 0;
    }
  }
}

// Fields

.field {
  @include grid-media($sba-grid-large) {
    margin-right: 20px;
    float: left;
    display: inline-block;
  }
}

.search {
  position: relative;

  @include grid-media($sba-grid-small) {
    width: 100%;
  }

  @include grid-media($sba-grid-large) {
    width: 300px;
  }

  input {
    line-height: 34px;
    height: 48px;
    padding-right: 40px !important;
  }
}
.zip {
  position: relative;

  @include grid-media($sba-grid-small) {
    width: 100%;
  }

  @include grid-media($sba-grid-large) {
    width: 170px;
  }

  input {
    line-height: 34px;
    height: 48px;
  }
}

// Balances bottom margin when error is active
.zip p {
  margin-bottom: -20px;
}

// Results

.centerContainer {
  outline: none;
  @include grid-media($sba-grid-large) {
    position: absolute;
    bottom: 0px;
    top: 40px;
    right: 0px;
    left: 0px;
    pointer-events: none;
  }
}

.officeResults {
  @include grid-media($sba-grid-large) {
    position: absolute;
    top: 220px;
    bottom: 0;
    background-color: unset;
    width: 30%;
    overflow: hidden;
    pointer-events: none;
  }
}

.resultsZeroState {
  display: none;
}

.resultContainer {
  min-width: 321px;
  @include grid-media($sba-grid-large) {
    position: absolute;
    pointer-events: all;
  }
}

